Fixed bug with overflow-x on carousels

--- a/src/components/EndScreen/partials/CompareUsersComponent/CompareUsers.css
+++ b/src/components/EndScreen/partials/CompareUsersComponent/CompareUsers.css
@@ -49,5 +49,5 @@
   display: block;
 }
 .slider-frame{
-  overflow: unset !important;
+  overflow: visible !important;
 }
